src/test_compilateur/tst/ok/ex5.c
int main(){
  int a;
  a = 0;
  if(a=1)
    return 1;
}
