src/test_compilateur/tst/error/odd_or_even_wrong__else_without_if.c
int main() {
	int n;

	int a;
	if(n%2==0);
	a = 1;
	else
	  a = 2;
		
	return 0;
}
